# esper

./: README.md
firmware/esper/main/: CMakeLists.txt
firmware/esper/main/src/: defines.h  graphic.cpp  main.c  update.c  update.h
firmware/esper/main/src/engines/: plaits.h  simple.h  tables.c  tables.h  testengine.h  utils.cpp  utils.h  wave.h  waveengines.h
firmware/esper/main/src/peripherals/adc/: testadc.c  testadc.h
firmware/esper/main/src/peripherals/adcSpi/: adcSpi.c  adcSpi.h  ads8688.h
firmware/esper/main/src/peripherals/digital/: digital.c
firmware/esper/main/src/peripherals/display/: display.c  display.h
firmware/esper/main/src/peripherals/encoder/: encoder.c
firmware/esper/main/src/peripherals/i2s/: i2s.c  i2s.h
firmware/esper/main/src/peripherals/lvgl/: lvgl.c
firmware/esper/main/src/peripherals/probe/: probe.c  probe.h
firmware/esper/main/src/plaits/: user_data.h
firmware/esper/main/src/plaits/dsp/: voice copy.cc  voice.cc  voice.h
firmware/esper/main/src/screens/: screen.cpp  screen.h  widgets.cpp  widgets.h
firmware/esper/main/src/screens/scope/: scope.cpp  scope.h
firmware/esper/main/src/screens/simpleVco/: simpleVco.cpp  simpleVco.h
firmware/esper/main/src/synths/test/: sine.h
firmware/esper/main/src/utils/: benchmark.c  benchmark.h  i2cscan.c  i2cscan.h  utils.c  utils.h  values.h
firmware/esper/main/src/widgets/digit/: digit.c  digit.h  digit_private.h
firmware/esper/main/src/widgets/monoled/: monoled.c  monoled.h  monoled_private.h
firmware/esper/main/src/widgets/perc/: perc.c  perc.h  perc_private.h
firmware/esper/main/src/widgets/spin/: spin.c  (+2 more)
(+61 files in other folders)
